# relaxed_channel

./: Cargo.toml  README.md
src/: lib.rs  receiver.rs  sender.rs
